2000-09-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* example/amanda.conf.in: chunk should not be larger than
	MAX_FILE_SIZE - 1Mb.

2000-09-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendsize.c (getsize_smbtar): remove unused debug_level 
	variable.
	* server-src/amlabel.c (main): init errstr to NULL, 
	fix compiler warning.

2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	patch by jason Thomas <jet@users.sourceforge.net>

	* tape-src/tapetype.c: fix help message.

2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	patch by Rudolf Cejka <cejkar@users.sourceforge.net>

	* common-src/file.c (mkpdir): check p != NULL
	* man/amstatus.8.in: typo

2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	patch by Rudolf Cejka <cejkar@users.sourceforge.net>

	* client-src/calcsize.c:sets correct program name,
	prevent coredumps and some improrer command line error mesages

2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amanda.h: prototype clean_regex().
	* common-src/match.c: new function clean_regex() that escape
	all non-alphanumeric character.
	* recover-src/extract_list.c (add_file, delete_file): use clean_regex().

2000-09-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c: (start_server_check): check for the oldlog
	directory.

2000-09-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amtrmlog.c: better check of the oldlog directory.

2000-09-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c: (start_server_check): don't check the tape
        if tapedev is /dev/null.

2000-09-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/reporter.c (output_tapeinfo): test reversed for run_tapes.

2000-08-01  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* client-src/sendbackup-gnutar.c (start_backup) <taropt>:
	NULL-terminate it correctly.

2000-07-18 John R. Jackson  <jrj@purdue.edu>
